#add_subdirectory(Kitchen1/)
add_subdirectory(TempHumSensor Room1_0x14)
add_subdirectory(TempHumSensor Room2_0x1C)
add_subdirectory(TempHumSensor RoomUp2_0x48)
add_subdirectory(TempHumSensor LivingRoom_0x04)
add_subdirectory(TempHumSensor BathRoom_0x19)
add_subdirectory(TempHumSensor Attic_0x47)
#add_subdirectory(HeatingControl/)
add_subdirectory(SerialGateway/)
add_subdirectory(EEPROM_Clear_8Mhz/)
add_subdirectory(EEPROM_Clear_16Mhz/)
add_subdirectory(EEPROM_Clear_1Mhz/)
add_subdirectory(EEPROM_Clear_Mega2560/)
#add_subdirectory(Basement1/)
add_subdirectory(DigitalIONode Basement2_0x1B)
add_subdirectory(DigitalIONode AtticNorth_0x02)
#add_subdirectory(pcb_test/)
#add_subdirectory(Outdoor_north/)
#add_subdirectory(Outdoor_South1/)
#add_subdirectory(Garden1/)
#add_subdirectory(AtticSouth1/)
#add_subdirectory(AtticNorth/)
add_subdirectory(SingleITSensor LivingRoomDoor1_0x06)
add_subdirectory(DualITSensor GardenWater_0x1D)
add_subdirectory(OneWireTemperatureSensor Kitchen1_0xA2)
#
