#add_subdirectory(Kitchen1/)
add_subdirectory(Generics/TempHumSensor Room1_0x14)
add_subdirectory(Generics/TempHumSensor Room2_0x1C)
add_subdirectory(Generics/TempHumSensor RoomUp2_0x48)
add_subdirectory(Generics/TempHumSensor LivingRoom_0x04)
add_subdirectory(Generics/TempHumSensor BathRoom_0x19)
add_subdirectory(Generics/TempHumSensor Attic_0x47)
#add_subdirectory(HeatingControl/)
add_subdirectory(Custom/SerialGateway/)
add_subdirectory(Utils/EEPROM_Clear_8Mhz/)
add_subdirectory(Utils/EEPROM_Clear_16Mhz/)
add_subdirectory(Utils/EEPROM_Clear_1Mhz/)
add_subdirectory(Utils/EEPROM_Clear_Mega2560/)
#add_subdirectory(Basement1/)
add_subdirectory(Generics/DigitalIONode Basement2_0x1B)
add_subdirectory(Generics/DigitalIONode AtticNorth_0x02)
add_subdirectory(Generics/DigitalIOMega AtticSouth_0x45)
add_subdirectory(Generics/DigitalIOMega HeatingControl_0x13)
#add_subdirectory(pcb_test/)
#add_subdirectory(Outdoor_north/)
#add_subdirectory(Outdoor_South1/)
#add_subdirectory(Garden1/)
#add_subdirectory(AtticSouth1/)
#add_subdirectory(AtticNorth/)
add_subdirectory(Generics/SingleITSensor LivingRoomDoor1_0x06)
add_subdirectory(Generics/DualITSensor GardenWater_0x1D)
add_subdirectory(Generics/OneWireTemperatureSensor Kitchen1_0xA2)
#
